# PairCoder

./: .gitignore  LICENSE  README.md  demo.py  index.html  paircoder.ipynb  pyproject.toml  readme.md  requirements.txt
api/: baichuan2_7b_api.py  chatglm_pro_api.py  chatglm_turbo_api.py  minimax_api.py  openai_api.py  qwen_7b_api.py
data/: sample_result.txt  sample_result2.txt  sample_result3.txt  sample_result4.txt
data/gpt3.5turbo/: output-1.txt  output-10.txt  output-100.txt  output-101.txt  output-102.txt  output-103.txt  output-104.txt  output-105.txt  output-106.txt  output-107.txt  output-108.txt  output-109.txt  output-11.txt  output-110.txt  output-111.txt  output-112.txt  output-113.txt  output-114.txt  output-115.txt  output-116.txt  output-117.txt  output-118.txt  output-119.txt  output-12.txt  output-120.txt  (+137 more)
examples/: parametric_3d.py  quickstart.py  run_p3dbench.py
paircoder/: __init__.py  client.py  loop.py
reproduction/: README.md  bcb_common.py  bcb_consensus.py  bcb_nav_consensus.py  bl_capture.py  blender_common.py  cad_exec.py  datikz_common.py  ds_common.py  gen_gt_p3d.py  grade_3dcb.py  grade_bcb.py  grade_bcb_passk.py  grade_datikz.py  grade_ds.py  grade_hex.py  grade_lcb.py  grade_lcb_passk.py  grade_rtllm.py  grade_verilog.py  grade_webapp.py  hex_common.py  lcb_common.py  mpl_exec.py  requirements-repro.txt  rescore_p3d.py  rtllm_common.py  run_3dcb.py  run_3dcb_full.py  run_bcb.py  run_cadbench.py  run_chartmimic.py  run_datikz.py  run_ds.py  run_hex.py  run_judge.py  run_lcb.py  run_p3d.py  run_pandasplot.py  run_plot2code.py  (+13 more)
